<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:segmentedgroup="http://schemas.android.com/tools">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented_group"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/segmented_group_height"
        android:layout_marginBottom="@dimen/holder_item_movie_textview_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        segmentedgroup:sc_border_width="@dimen/tabbar_rule_width"
        segmentedgroup:sc_corner_radius="@dimen/activity_margin_top"
        segmentedgroup:sc_tint_color="@color/colorAppGrey">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/overview"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/color_grey_app"
            android:text="@string/overview"
            android:checked="true"
            app:buttonTint="@color/color_orange_app" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/people"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/color_grey_app"
            app:buttonTint="@color/color_orange_app"
            android:text="@string/people" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/similar"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/color_grey_app"
            android:text="@string/similar" />
    </info.hoang8f.android.segmented.SegmentedGroup>

</android.support.constraint.ConstraintLayout>

