<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    >


    <TextView
        android:id="@+id/movie_facts_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/holder_item_movie_textview_margin"
        android:layout_marginTop="@dimen/holder_movie_layout_padding"
        android:text="@string/movie_facts"
        android:textColor="@color/color_white"
        android:textSize="@dimen/toolbar_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/holder_item_movie_textview_margin"
        android:paddingTop="@dimen/activity_margin_top"
        android:paddingRight="@dimen/holder_movie_facts_textview_padding_right"
        android:paddingBottom="@dimen/holder_movie_layout_padding"
        android:text="@string/release_date"
        android:textColor="@color/color_white"
        android:textSize="@dimen/holder_movie_facts_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_facts_title_view" />

    <TextView
        android:id="@+id/runtime_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/holder_item_movie_textview_margin"
        android:paddingTop="@dimen/holder_item_movie_image_view_margin"
        android:paddingRight="@dimen/holder_movie_facts_textview_padding_right"
        android:paddingBottom="@dimen/holder_movie_layout_padding"
        android:text="@string/runtime"
        android:textColor="@color/color_white"
        android:textSize="@dimen/holder_movie_facts_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release_date_view" />

    <TextView
        android:id="@+id/budget_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/holder_item_movie_textview_margin"
        android:paddingTop="@dimen/holder_item_movie_image_view_margin"
        android:paddingRight="@dimen/holder_movie_facts_textview_padding_right"
        android:paddingBottom="@dimen/holder_movie_layout_padding"
        android:text="@string/budget"
        android:textColor="@color/color_white"
        android:textSize="@dimen/holder_movie_facts_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/runtime_view" />

    <TextView
        android:id="@+id/revenue_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/holder_item_movie_textview_margin"
        android:paddingTop="@dimen/holder_item_movie_image_view_margin"
        android:paddingRight="@dimen/holder_movie_facts_textview_padding_right"
        android:paddingBottom="@dimen/holder_movie_facts_textview_padding_right"
        android:text="@string/revenue"
        android:textColor="@color/color_white"
        android:textSize="@dimen/holder_movie_facts_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_view" />

</androidx.constraintlayout.widget.ConstraintLayout>